--- a/ecu.css
+++ b/ecu.css
@@ -32,6 +32,7 @@ section img {
 
 /* END OF WELCOME */
 
+/* NEWS SECTION */
 div.news{
     background-color: #022B3A;
     padding: 10px 0 0 0;
@@ -48,17 +49,42 @@ div.news{
 }
 
 article {
-    padding: 30px 0 0 100px;
+    margin: 50px 0 0 100px;
 }
 
 article img {
-    width: 500px;
-    height: 250px;
+    width: 600px;
+    height: 350px;
 }
 
 article p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
     color: white;
-    width: 500px;
+    width: 600px;
+}
+
+.more-news {
+    text-align: center;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    margin-top: 150px;
+}
+
+/* END OF NEWS SECTION */
+
+div.apply{
+    background-color: #F5F3F4;
+    width: 1520px;
+    height: 900px;
+}
+.apply img{
+    padding: 60px 60px 60px 60px; 
+    width: 1400px;
+    height: 850px;
+}
+
+.apply-now {
+    
 }
