--- a/ecu.css
+++ b/ecu.css
@@ -74,6 +74,7 @@ article p {
 
 /* END OF NEWS SECTION */
 
+/* APPLY */
 div.apply{
     position: absolute;
     z-index: -2;
@@ -92,8 +93,10 @@ div.apply{
 .apply-now p {
     margin: 10px 0 10px 0;
     text-align: center;
-    font-size: 23px;
+    font-size: 20px;
     color: white;
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
 }
 .apply-now {
@@ -110,6 +113,8 @@ div.apply{
     font-size: 50px;
     text-align: left;
     padding-left: 10px;
+    font-family: 'Montserrat', sans-serif;
+    /* opacity: ; */
     
 }
 
@@ -120,4 +125,7 @@ div.apply{
     height: 248px;
     left: 150px;
     top: 550px;
+    opacity: 0.7;
 }
+
+/* END OF APPLY */
