--- a/ecu.css
+++ b/ecu.css
@@ -120,12 +120,11 @@ div.apply{
 
 .dive {
     position: absolute;
-    background-color: white;
+    background-color:rgba(255, 255, 255, 0.7);
     width: 524px;
     height: 248px;
     left: 150px;
     top: 550px;
-    opacity: 0.7;
 }
 
 /* END OF APPLY */
