--- a/ecu.css
+++ b/ecu.css
@@ -5,7 +5,7 @@ body{
 /* HEAD */
 
 .ECU{
-    width: 120px;
+    width: 150px;
     height: 120px;
     padding: -80px 0 0 0;
 }
@@ -16,7 +16,7 @@ hr {
 nav li {
     display: inline;
     font-family: 'Zen Kaku Gothic Antique', sans-serif;
-    font-size: 25px;
+    font-size: 20px;
     align-items: center;
     padding: 0 70px 0 70px;
 }
@@ -28,6 +28,27 @@ section img {
     min-width: 1520px;
     max-height: 800px; 
     /* background-image: url("wonderlane-6zlgM-GUd6I-unsplash.jpg"); */
+}
+
+.landing-page {
+    position: absolute;
+    top: 300px;
+    left: 17%;
+    width: 1000px;
+    height: 300px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    z-index: 1;
+
+}
+
+.landing-page p {
+    position: absolute;
+    top: 10px;
+    text-align: center;
+    color: white;
+    font-size: 60px;
+    font-family: 'Source Code Pro', monospace;
 }
 
 /* END OF WELCOME */
@@ -128,3 +149,80 @@ div.apply{
 }
 
 /* END OF APPLY */
+
+
+/* FOOTER */
+footer {
+    position: absolute;
+    top: 2940px;
+    width: 1520px;
+    height: 500px;
+    /* height: max-content; */
+    background-color: #022B3A;
+    
+}
+
+.ecu-white {
+    position: absolute;
+    top: 50px;
+    left: -200px;
+    width: 700px;
+    height: 250px;
+}
+
+.footer-item1 {
+    position: absolute;
+    left: 400px;
+    top: 40px;
+    list-style: none;
+    color: white;
+    line-height: 40px;
+    
+}
+.footer-item2 {
+    position: absolute;
+    left: 700px;
+    top: 40px;
+    list-style: none;
+    color: white;
+    line-height: 40px;
+}
+.footer-item3 {
+    position: absolute;
+    left: 1000px;
+    top: 40px;
+    list-style: none;
+    color: white;
+    line-height: 40px;
+}
+
+footer li {
+    font-size: 17px;
+    font-family: 'Comfortaa', cursive;
+}
+
+.socials img {
+    width: 25px;
+    height: 25px;
+    padding-left: 30px;
+    
+}
+
+.socials {
+    display: inline-flex;
+    position:absolute;
+    bottom: 120px;
+    left: 40%;
+    
+}
+
+.copyright {
+    position: absolute;
+    color: white;
+    bottom: 0;
+    left: 70px;
+    font-size: 12px;
+    font-family: sans-serif;
+}
+
+/* END OF FOOTER */
