--- a/ecu.css
+++ b/ecu.css
@@ -10,6 +10,10 @@ body{
     padding: -80px 0 0 0;
 }
 
+.hr-search {
+    width: 200px;
+}
+
 hr {
     padding: 0px 0 0 0;
 }
@@ -32,7 +36,7 @@ section img {
 
 .landing-page {
     position: absolute;
-    top: 300px;
+    top: 400px;
     left: 17%;
     width: 1000px;
     height: 300px;
@@ -49,6 +53,28 @@ section img {
     color: white;
     font-size: 60px;
     font-family: 'Source Code Pro', monospace;
+}
+
+.rated {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    left: 35%;
+    top: 750px;
+    width: 600px;
+    height: 50px;
+    /* z-index: 2; */
+}
+
+.rated p {
+    position: absolute;
+    top: -10px;
+    left: 50px;
+    right: 50px;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:500;
 }
 
 /* END OF WELCOME */
